--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="goto_SetUp_description">Goto_To_Set_Up</string>
     <string name="setup_Events_page">Set_Up_the_days_Event</string>
     <string name="goto_Catch_page">Enter_Catch_Page</string>
-    <string name="todays_Fishing_Log">Todays_Fishing_Log</string>
+    <string name="todays_Fishing_Log">Fishing_Log</string>
     <string name="type_of_Day">Fun Day or Tournament</string>
     <string name="days_End_time">End Time</string>
     <string name="fun_Day">Fun Day</string>
