--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">BassAnglerTracker</string>
+    <string name="app_image_description">SoftLock Culling System with Voice Controlled Culling</string>
     <string name="enter_catch_lbs_and_ozs">Enter Catch (Lbs and Ozs)</string>
+    <string name="img_setup">Set Up Page</string>
     <string name="addCatchBtn">Add a Catch</string>
     <string name="timer_place_holder">Time Remaining</string>
     <string name="tournament_activity_description">enter the weights of the catch and the app suggests the fish to cull and gives the total weight</string>
@@ -16,15 +18,57 @@
     <string name="type_of_Day">Fun Day or Tournament</string>
     <string name="days_End_time">End Time</string>
     <string name="fun_Day">Fun Day</string>
+    <string name="edit_catch">Edit Catch</string>
     <string name="tournament_Day">Tournament</string>
     <string name="lbl_Type_of_Fishing_Day">Type of Fishing Day</string>
+    <string name="lb_values">Lbs  0 to 99 Lbs</string>
+    <string name="ozs_values">Ozs  0 to 15 Ozs</string>
+    <string name="kg_values"> Kgs  0 to 99 Kgs</string>
+    <string name="gram_values"> Grams  0 to 99 0.XXKgs</string>
+    <string name="inch_values">Inches 0 to 99 " </string>
+    <string name="eight_values">X/8"  0 to 7 8ths</string>
+    <string name="cm_values">Metric 0 to 99 Cm</string>
+    <string name="milli_values">millimeters  0 to 99 mm</string>
     <string name="txtType_of_Measurement">Type of Measurement Units</string>
+    <string name="gps_info">GPS will be ON only to get location of your catch</string>
     <string name="gps_usage_permission">Record GPS?</string>
-
-
-    <string name="title_weight_lbs_oz">Enter Weight (Lbs/Oz)</string>
-    <string name="title_weight_kgs">Enter Weight (Kgs and Grams)</string>
-
+    <string name="set_alarm">Set Alarm</string>
+    <string name="cancel">Cancel</string>
+    <string name="title_enter_catch">Enter Catch:</string>
+    <string name="title_weight_lbs_oz">Species and Weight (Lbs/Oz)</string>
+    <string name="title_weight_kgs">Enter Catch: Species and Weight(Kgs and Grams)</string>
+    <string name="enter_catch_details_inches">Enter Catch: Species and Length -Inches-</string>
+    <string name="enter_catch_details_cm">Enter Catch: Species and Length -Centimeters-</string>
+    <string name="inches">Inches</string>
+    <string name="_8ths_of_inch">8ths of inch</string>
+    <string name="select_species">Select Species</string>
+    <string name="log_catches_inches">Log Catches Inches</string>
+    <string name="todays_log_centimeters">Log Catches Centimeters</string>
+    <string name="edit_catch_entry_lbs">Edit Catch Entry Lbs</string>
+    <string name="edit_catch_entry_kgs">Edit Catch Kgs</string>
+    <string name="edit_catch_entry_inches">Edit Catch Inches</string>
+    <string name="edit_catch_entry_cms">Edit Catch Cms</string>
+    <string name="enter_catch_in_kgs">Enter Catch in Kgs</string>
+    <string name="enter_cm_and_mm">Enter Cm and mm</string>
+    <string name="cms_0_to_99">Cms 0 to 99</string>
+    <string name="_0_to_9_mm">0 to 9 mm</string>
+    <string name="enter_weight_centimeters">Enter Weight (Centimeters)</string>
+    <string name="enter_inches_and_8ths">Enter Inches and 8ths</string>
+    <string name="kgs_100_0_to_99">Kgs/100 0 to 99</string>
+    <string name="kgs_0_to_99kgs">-Kgs- 0 to 99Kgs</string>
+    <string name="using_culling_app_in_manual_mode">Using Culling App in Manual Mode</string>
+    <string name="select_the_button_for_each_topic">Select the button for each topic</string>
+    <string name="catch_kgs">Catch Kgs</string>
+    <string name="catch_lbs">Catch Lbs</string>
+    <string name="catch_inch">Catch Inch</string>
+    <string name="catch_cms">Catch Cms</string>
+    <string name="teach_vcc">Teach VCC</string>
+    <string name="what_is_vcc">What is VCC</string>
+    <string name="using_the_voice_commands">Using The Voice Commands</string>
+    <string name="goto_setup">Goto setup</string>
+    <string name="user_training_page">User Training Page</string>
+    <string name="weight_lbs_ozs">Weight Lbs/Ozs</string>
+    <string name="alarm">ALARM</string>
 
 
     //species
