Everything works... now adding the GPS with modifications for it to work in background to allow user to keep fishing...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,6 +100,9 @@
     <string name="weight_kgs">WEIGHT Kgs</string>
     <string name="length_inches">Length Inches</string>
     <string name="total_length_cms">Total Length Cms</string>
+    <string name="save_catch_button">Save Catch Button</string>
+    <string name="cancel_out">Cancel out</string>
+    <string name="_18_ozs">18 ozs</string>
 
 
     //species
