All Spinners are messed Up

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,6 +137,7 @@
     <string name="species">Species</string>
     <string name="arrange_the_listing_as_needed">Arrange the Listing As Needed</string>
     <string name="drag_handle">Drag handle</string>
+    <string name="fish_species_image">Fish species image</string>
 
 
     //species
