--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,6 +138,7 @@
     <string name="arrange_the_listing_as_needed">Arrange the Listing As Needed</string>
     <string name="drag_handle">Drag handle</string>
     <string name="fish_species_image">Fish species image</string>
+    <string name="move_the_species_up_down_as_needed">Move the Species Up / Down as Needed</string>
 
 
     //species
