--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -167,7 +167,12 @@
     <string name="type_of_measuring">Type of Measuring</string>
     <string name="disabled">Disabled</string>
     <string name="enabled">Enabled</string>
+    <string name="gps_pin">Mark if GPS Location for Catch</string>
     <string name="log_catch_location">Log Catch Location</string>
+    <string name="gps_on">GPS\nON</string>
+    <string name="gps_off">GPS\nOFF</string>
+    <string name="close_map">Close Map</string>
+    <string name="select_query_fields_for_map">Select Query Fields for Map</string>
 
 
     //species
