--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -228,6 +228,10 @@
     <string name="setting_up_bluetooth_voice">Setting Up the Bluetooth \n and \n Voice Assistant</string>
     <string name="test_bluetooth">We’re going to test your speakers. Make sure your Bluetooth headset is connected.</string>
     <string name="start_test">Start Test</string>
+    <string name="edit_tournament_lbs_ozs">Edit Tournament\nWeight Lbs ozs</string>
+    <string name="clip">Clip</string>
+    <string name="edit_tourn_kgs">Edit Tournament\nWeight Kgs</string>
+    <string name="save">Save</string>
 
 
     //species
