Reworked the SetUp and CatchEntryTournament to share the Voice Control Enabled feature.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -232,6 +232,7 @@
     <string name="clip">Clip</string>
     <string name="edit_tourn_kgs">Edit Tournament\nWeight Kgs</string>
     <string name="save">Save</string>
+    <string name="voice_control_tag">Voice\nControl</string>
 
 
     //species
